feat: Business Layer 테스트(3)