@@ -6,29 +6,53 @@ import com.example.testcode.spring.domain.order.Order;
 import com.example.testcode.spring.domain.order.OrderRepository;
 import com.example.testcode.spring.domain.product.Product;
 import com.example.testcode.spring.domain.product.ProductRepository;
+import com.example.testcode.spring.domain.product.ProductType;
+import com.example.testcode.spring.domain.stock.Stock;
+import com.example.testcode.spring.domain.stock.StockRepository;
 import java.time.LocalDateTime;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
+@Transactional
 @RequiredArgsConstructor
 @Service
 public class OrderService {
 
-  private final OrderRepository orderRepository;
   private final ProductRepository productRepository;
+  private final OrderRepository orderRepository;
+  private final StockRepository stockRepository;
 
   public OrderResponse createOrder(OrderCreateRequest request, LocalDateTime registeredDateTime) {
     List<String> productNumbers = request.getProductNumbers();
-    List<Product> duplicateProducts = findProductsBy(
-        productNumbers);
+    List<Product> products = findProductsBy(productNumbers);
 
-    Order order = Order.create(duplicateProducts, registeredDateTime);
-    Order saveOrder = orderRepository.save(order);
+    deductStockQuantities(products);
 
-    return OrderResponse.of(saveOrder);
+    Order order = Order.create(products, registeredDateTime);
+    Order savedOrder = orderRepository.save(order);
+    return OrderResponse.of(savedOrder);
+  }
+
+  private void deductStockQuantities(List<Product> products) {
+    List<String> stockProductNumbers = extractStockProductNumbers(products);
+
+    Map<String, Stock> stockMap = createStockMapBy(stockProductNumbers);
+    Map<String, Long> productCountingMap = createCountingMapBy(stockProductNumbers);
+
+    for (String stockProductNumber : new HashSet<>(stockProductNumbers)) {
+      Stock stock = stockMap.get(stockProductNumber);
+      int quantity = productCountingMap.get(stockProductNumber).intValue();
+
+      if (stock.isQuantityLessThan(quantity)) {
+        throw new IllegalArgumentException("재고가 부족한 상품이 있습니다.");
+      }
+      stock.deductQuantity(quantity);
+    }
   }
 
   private List<Product> findProductsBy(List<String> productNumbers) {
@@ -38,6 +62,25 @@ public class OrderService {
 
     return productNumbers.stream()
         .map(productMap::get)
-        .toList();
+        .collect(Collectors.toList());
   }
+
+  private static List<String> extractStockProductNumbers(List<Product> products) {
+    return products.stream()
+        .filter(product -> ProductType.containsStockType(product.getType()))
+        .map(Product::getProductNumber)
+        .collect(Collectors.toList());
+  }
+
+  private Map<String, Stock> createStockMapBy(List<String> stockProductNumbers) {
+    List<Stock> stocks = stockRepository.findAllByProductNumberIn(stockProductNumbers);
+    return stocks.stream()
+        .collect(Collectors.toMap(Stock::getProductNumber, s -> s));
+  }
+
+  private static Map<String, Long> createCountingMapBy(List<String> stockProductNumbers) {
+    return stockProductNumbers.stream()
+        .collect(Collectors.groupingBy(p -> p, Collectors.counting()));
+  }
+
 }
